--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["day01", "day02"]
+members = ["day01", "day02", "day03"]
 
 [workspace.dependencies]
 anyhow = "1"
